# Eikumi

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  pyproject.toml
cogs/: ranks.py
eikumi/: __init__.py  __main__.py
src/: main.rs
